eureka and resource server instance id property\n to show multiple running instances on eureka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-spring.application.name=ResourceServer
-server.port=8081
+spring.application.name = demo-resource-server
+server.port=0
 
 ## Spring Security
 # spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/mkrblogs
 
 # Certs to validate the access tokens
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/mkrblogs/protocol/openid-connect/certs
+
+eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
+
+eureka.instance.instance-id=${spring.application.name}:${instanceId:${random.value}}
